fix overflow word breaking

--- a/themes/c3w-eh18/assets/css/custom.css
+++ b/themes/c3w-eh18/assets/css/custom.css
@@ -23,6 +23,15 @@ body{
 	}
 }
 
+/* word beak */
+article {
+	overflow-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+}
+
 /* article background */
 article {
     padding: 2rem;
